# voas-ai

./: .gitignore  .prettierignore  CLAUDE.md  POST_V1.md  README.md  ROADMAP.md  SPRINTS.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  deps.py  main.py
apps/api/app/core/: currency.py  exceptions.py  logging.py  rate_limit.py  security.py  supabase.py
apps/api/app/data/: help_bot_context.md
apps/api/app/integrations/: twilio_whatsapp.py  vapi.py
apps/api/app/models/: admin.py  analytics.py  billing.py  contact.py  conversation.py  customer.py  customer_detail.py  help.py  location.py  member.py  menu.py  notification.py  order.py  salon.py  ticket.py  voice.py  whatsapp.py  workspace.py
apps/api/app/routers/: admin.py  analytics.py  billing.py  contact.py  conversations.py  customers.py  google.py  health.py  help.py  kiosk.py  locations.py  members.py  menu.py  notifications.py  orders.py  salon.py  tickets.py  voice.py  webhooks.py  whatsapp.py  workspaces.py
apps/api/app/services/: admin_activity_service.py  admin_audit_service.py  admin_contact_service.py  admin_kb_service.py  admin_ticket_service.py  admin_user_service.py  admin_workspace_service.py  analytics_service.py  announcement_service.py  appointment_reminder_service.py  audit_service.py  billing_service.py  (+23 more)
apps/api/scripts/: backfill_usage.py  create_admin.py
apps/api/tests/: conftest.py  helpers.py  test_auth.py  test_contact.py  test_health.py  test_tickets.py  test_v2_endpoints.py  test_workspaces.py
(+328 files in other folders)
